<resources>
    <string name="app_name">SnookerScoreTracker</string>
    <string name="title">Snooker Score Tracker</string>

    <string name="single_game">2 PLayers</string>
    <string name="team_game">4 PLayers</string>

    <string name="team_1">Team name</string>
    <string name="team_2">Team 2</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

    <string name="next_team">Next team</string>
    <string name="finish_setup">Finish</string>
    <string name="start_game">Start game</string>

    <string name="next_player">NEXT PLAYER</string>
    <string name="foul">FOUL</string>
    <string name="end_frame">END FRAME</string>
    <string name="new_frame">NEW FRAME</string>
    <string name="exit_game">EXIT GAME</string>

    <string name="name">NAME</string>
    <string name="score">SCORE</string>

    <string name="begin">BEGIN</string>
    <string name="game_name">Snooker4</string>

</resources>
