<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bianca.snookerscoretracker.GameActivity"
    tools:layout_editor_absoluteY="81dp">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="134dp"
        android:layout_marginBottom="257dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="Name" />

        <TextView
            android:id="@+id/team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:id="@+id/team_one_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2" />

        <TextView
            android:id="@+id/score_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:text="Score" />

        <TextView
            android:id="@+id/player_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3" />

        <TextView
            android:id="@+id/player_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4" />

        <TextView
            android:id="@+id/player_one_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="3" />

        <TextView
            android:id="@+id/player_two_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="4" />

        <TextView
            android:id="@+id/team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5" />

        <TextView
            android:id="@+id/player_three_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6" />

        <TextView
            android:id="@+id/player_four_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7" />

        <TextView
            android:id="@+id/team_two_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="5" />

        <TextView
            android:id="@+id/player_three_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="6" />

        <TextView
            android:id="@+id/player_four_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="7" />
    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="288dp"
        android:layout_height="117dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <Button
            android:id="@+id/red_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/yellow_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:background="@color/yellow"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/green_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:background="@color/green"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/brown_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:background="@color/brown"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/blue_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:background="@color/blue"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/pink_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:background="@color/pink"
            android:onClick="onBallClick" />

        <Button
            android:id="@+id/black_ball"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_margin="5dp"
            android:layout_row="1"
            android:background="@color/black"
            android:onClick="onBallClick" />
    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout5"
        android:layout_width="313dp"
        android:layout_height="106dp"
        android:layout_marginBottom="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <Button
            android:id="@+id/end_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/end_frame" />

        <Button
            android:id="@+id/foul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/foul" />

        <Button
            android:id="@+id/end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/exit_game" />

        <Button
            android:id="@+id/next_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/next_player" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
